...
    "candy_usage_policy_title": "별사탕 사용정책",
    "@candy_usage_policy_title": {
        "translationTimestamp": "2024-07-21T11:18:53.669108"
    },
    "comments": "댓글",
    "@comments": {},
    "common_all": "전체",
    "@common_all": {},
    "common_fail": "실패",
    "@common_fail": {},
    "common_retry_label": "다시 시도",
    "@common_retry_label": {},
    "common_success": "성공",
...
    "label_vote_end": "투표 종료",
    "@label_vote_end": {},
    "label_vote_reward_list": "리워드 리스트",
    "@label_vote_reward_list": {
        "translationTimestamp": "2024-07-21T11:18:53.669108"
    },
    "label_vote_screen_title": "투표",
    "@label_vote_screen_title": {
        "translationTimestamp": "2024-07-21T11:18:53.669108"
    },
    "label_vote_tab_birthday": "생일 투표",
    "@label_vote_tab_birthday": {
        "translationTimestamp": "2024-07-21T11:18:53.669108"
...
